[package]
name = "tasker-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.17", features = ["tracing"] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.38"
uuid = { version = "1.3.1", features = ["v4", "serde", "std"] }

